--- a/WebFun/Profile_Page/style.css
+++ b/WebFun/Profile_Page/style.css
@@ -4,9 +4,11 @@
 }
 
 .container{
-    width: 970px;
+    width: auto;
     margin: auto;
 }
+
+/* NAVBAR */
 
 .nav{
     display: flex;
@@ -28,7 +30,7 @@
     display: flex;
     justify-content: space-between;
     list-style-type: none;
-    margin-right: 200px;
+    margin-right: 500px;
     width: 300px;
     padding: 5px;
     align-items: center;
@@ -59,21 +61,35 @@ a:hover{
     background-color: rgb(0, 128, 255);
 }
 
-.top{
+/* USER-CARD */
+
+main{
+    max-width: 1000px;
+    margin: 2em auto;
+    display: flex;
+    gap: 1em;
+}
+
+.col-1{
+    display: flex;
+    flex: 1;
+}
+
+.user-top{
     background-color: teal;
-    width: 440px;
+    width: 550px;
     height: 75px;
     margin: auto;
     margin-top: 20px;
-    margin-left: 100px;
+    margin-left: 40px;
     border: solid 2px teal;
 }
 
-.bottom{
+.user-bottom{
     background-color: white;
-    width: 440px;
+    width: 550px;
     height: 250px;
-    margin-left: 100px;
+    margin-left: 40px;
     border: solid 2px gray;
 }
 
@@ -82,6 +98,10 @@ a:hover{
     border-radius: 50%;
     margin-left: 30px;
     margin-top: 20px;
+}
+
+img{
+    border-radius: 50%;
 }
 
 .user-name{
@@ -98,12 +118,11 @@ a:hover{
 
 .location{
     display: flex;
-    background-color: white;
 }
 
-h2{
+.city{
     background-color: white;
-    margin-right: 300px;
+    margin-right: 400px;
     margin-top: 15px;
     font-size: 16px;
 }
@@ -133,4 +152,121 @@ h3{
 
 a:hover{
     text-decoration: underline;
+}
+
+.new-anchor{
+    color: white;
+}
+
+/* EDUCATION */
+
+.ed-top{
+    background-color: rgb(69, 69, 69);
+    width: 550px;
+    height: 30px;
+    margin-top: 80px;
+    border: solid 2px rgb(69, 69, 69);
+}
+
+.ed-bottom{
+    background-color: white);
+    width: 550px;
+    height: 100px;
+    border: solid 2px rgb(69, 69, 69);
+}
+
+.education-txt{
+    color: white;
+    margin: 3px;
+}
+
+h2, p{
+    text-align: center;
+    margin: 5px;
+}
+
+
+.gray {
+    color: grey;
+    position: relative;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-left: 140px;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1em;
+
+
+}
+
+.col {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+}
+
+.icon {
+    height: 2em;
+}
+
+.icon.utility {
+    height: 1.5em;
+}
+
+.top {
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0.5em 0;
+}
+
+.count {
+    background-color: #888;
+    padding: 0.25em 0.5em;
+    border-radius: 50%;
+}
+.request-body {
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+}
+
+.request.row {
+    justify-content: space-between;
+}
+
+.card {
+    border: 2px solid #888;
+}
+
+.top {
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 8px 0;
+    margin: auto;
+}
+
+.count {
+    background-color: #888;
+    padding: 4px 8px;
+    border-radius: 50%;
+}
+
+.more {
+    border-top: 2px solid grey;
+    padding: 16px;
+}
+
+a {
+    color: #2B78E4;
 }
