--- a/Python/great_number_game/templates/index.html
+++ b/Python/great_number_game/templates/index.html
@@ -18,7 +18,7 @@
     }
 </style>
 
-    <title>Great Number Game</title>
+    <title>Great Number game</title>
 </head>
 <body>
     <div class="container">
