--- a/Python/login_reg/flask_app/templates/index.html
+++ b/Python/login_reg/flask_app/templates/index.html
@@ -4,130 +4,119 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap.css') }}">
-    <title>登録とログイン</title>
-    <style>
-        .container{
-            padding: 32px;
-        }
-        .main{
-            display: flex;
-            justify-content: space-around;
-            align-items:flex-start;
-            text-align: left;
-        }
-        .card{
-            display: flex;
-            flex-direction: column;
-            /* justify-content: center; */
-            text-align: left;
-            margin: auto 32px;
-            background-color: rgb(74, 64, 134);
-            color: white;
-            padding: 32px;
-            width: 400px;
-        }
-        h1{
-            margin-bottom: 69px;
-        }
-        form{
-            display: flex;
-            flex-direction: column;
-        }
-        label{
-            margin-top: 18px;
-        }
-        input{
-            color: black;
-            width: 232px;
-        }
-        .clicky{
-            width: 96px;
-            margin-top: 32px;
-        }
-    </style>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <title>Login and Register</title>
 </head>
 <body>
+    {% with messages = get_flashed_messages() %}     <!-- declare a variable called messages -->
+    {% if messages %}                            <!-- check if there are any messages -->
+        {% for message in messages %}            <!-- loop through the messages -->
+            <p>{{message}}</p>                   <!-- display each message in a paragraph tag -->
+        {% endfor %}
+    {% endif %}
+{% endwith %}
     <div class="container">
-        <div class="main">
-            <div class="card" id = "registration">
-                <h1>Register</h1>
-                {% with messages = get_flashed_messages(with_categories = True) %}
-                <form action="/register" method = "POST">
-                    <label for="first_name">First name:</label>
-                    <input type="text" name = "first_name">
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            {% if category == 'first_name' %}
-                                <span class="form-text text-danger">{{message}}</span>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    <label for="last_name">Last name:</label>
-                    <input type="text" name = "last_name">
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            {% if category == 'last_name' %}
-                                <span class="form-text text-danger">{{message}}</span>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    <label for="email">Email:</label>
-                    <input type="text" name = "email">
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            {% if category == 'email' %}
-                                <span class="form-text text-danger">{{message}}</span>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    <label for="password">Password:</label>
-                    <input type="password" name = "password">
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            {% if category == 'password' %}
-                                <span class="form-text text-danger">{{message}}</span>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    <label for="confirm">Confirm password:</label>
-                    <input type="password" name = "confirm">
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            {% if category == 'confirm' %}
-                                <span class="form-text text-danger">{{message}}</span>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    <input class = "clicky btn btn-light" type="submit" value="Register">
-                </form>
-                {% endwith %}
+        <div class="row mt-3">
+            <div class="col">
+                <div class="card">
+                    <h5 class="card-header">REGISTER</h5>
+                    <div class="card-body">
+                        {% with messages = get_flashed_messages(with_categories = True) %}
+                        <form action="/register" method="post">
+                            <div class="mb-3">
+                                <label for="first_name" class="form-label">First Name:</label>
+                                <input type="text" name="first_name" id="first_name" class="form-control">
+                                {% if messages %}
+                                    {% for category, message in messages %}
+                                        {% if category == 'first_name' %}
+                                            <span class="form-text text-danger">{{message}}</span>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                            <div class="mb-3">
+                                <label for="last_name" class="form-label">Last Name:</label>
+                                <input type="text" name="last_name" id="last_name" class="form-control">
+                                {% if messages %}
+                                    {% for category, message in messages %}
+                                        {% if category == 'last_name' %}
+                                            <span class="form-text text-danger">{{message}}</span>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                            <div class="mb-3">
+                                <label for="email" class="form-label">Email:</label>
+                                <input type="text" name="email" id="email" class="form-control">
+                                {% if messages %}
+                                    {% for category, message in messages %}
+                                        {% if category == 'email' %}
+                                            <span class="form-text text-danger">{{message}}</span>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password:</label>
+                                <input type="password" name="password" id="password" class="form-control">
+                                {% if messages %}
+                                    {% for category, message in messages %}
+                                        {% if category == 'password' %}
+                                            <span class="form-text text-danger">{{message}}</span>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                            <div class="mb-3">
+                                <label for="password_confirmation" class="form-label">Confirm Password:</label>
+                                <input type="password" name="password_confirmation" id="password_confirmation" class="form-control">
+                                {% if messages %}
+                                    {% for category, message in messages %}
+                                        {% if category == 'password_confirmation' %}
+                                            <span class="form-text text-danger">{{message}}</span>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
+                            </div>
+                            <div class="d-flex justify-content-end">
+                                <input type="submit" value="REGISTER" class="btn btn-primary">
+                            </div>
+                        </form>
+                        {% endwith %}
+                    </div>
+                </div>
             </div>
-            <div class="card" id = "login">
-                <h1>Login</h1>
-                {% with messages = get_flashed_messages(with_categories = True) %}
-                <form action="/login" method = "POST">
-                    <label for="login_email">Email:</label>
-                    <input type="text" name = "login_email">
-                    <label for="login_password">Password:</label>
-                    <input type="password" name = "login_password">
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            {% if category == 'login_email' %}
-                                <span class="form-text text-danger">{{message}}</span>
+            <div class="col">
+                <div class="card">
+                    <h5 class="card-header">LOGIN</h5>
+                    <div class="card-body">
+
+
+                        {% with messages = get_flashed_messages(with_categories = True) %}
+                        <form action="/login" method="post">
+                            <div class="mb-3">
+                                <label for="log_email" class="form-label">Email:</label>
+                                <input type="text" name="log_email" id="log_email" class="form-control">
+                                {% if messages %}
+                                {% for category, message in messages %}
+                                    {% if category == 'log_email' %}
+                                        <span class="form-text text-danger">{{message}}</span>
+                                    {% endif %}
+                                {% endfor %}
                             {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    {% if messages %}
-                        {% for category, message in messages %}
-                            {% if category == 'login_password' %}
-                                <span class="form-text text-danger">{{message}}</span>
-                            {% endif %}
-                        {% endfor %}
-                    {% endif %}
-                    <input class = "clicky btn btn-light" type="submit" value="Login">
-                </form>
-                {% endwith %}
+                            </div>
+                            <div class="mb-3">
+                                <label for="log_password" class="form-label">Password:</label>
+                                <input type="password" name="log_password" id="log_password" class="form-control">
+                            </div>
+                            <div class="d-flex justify-content-end">
+                                <input type="submit" value="LOGIN" class="btn btn-primary">
+                            </div>
+                        </form>
+                        {% endwith %}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
